--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,19 @@
     </head>
     </body>
         <div class='container'>
-            <div id='profile-box'>
-                <h2>Hello, World!</h2>
-                <img id='profile-img' src="{{ url_for('static', filename='profile.jpg') }}"/>
-                <h1>Ethan Graf</h1>
-                <button type="button" class="btn btn-outline-primary">Enter</button>
+            <div class='modal fade' id='profile-modal'>
+                <div class='modal-dialog' role='content'>
+                    <div class='modal-content' id='profile-content'>
+                        <div class='modal-body' id='profile-box'>
+                            <h2>Hello, World!</h2>
+                            <img id='profile-img' src="{{ url_for('static', filename='profile.jpg') }}"/>
+                            <h1>Ethan Graf</h1>
+                            <button type="button" data-dismiss='modal' id='profile-btn' class="btn btn-outline-primary">Enter</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
-
 
 {% include "footer.html" %}
 
