--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,5 +4,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         <!-- Custom js -->
         <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+        <!-- Google Map API -->
+        <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBt7wriqR8VrXXHiRmxaqWS_llDDZZlN74&callback=initMap'></script>
     </body>
 </html>
