--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,19 @@
 {% include "header.html" %}
     </head>
     </body>
-        <div class='container'>
-            <div class='modal fade' id='profile-modal'>
-                <div class='modal-dialog' role='content'>
-                    <div class='modal-content' id='profile-content'>
-                        <div class='modal-body' id='profile-box'>
-                            <h2>Hello, World!</h2>
-                            <img id='profile-img' src="{{ url_for('static', filename='profile.jpg') }}"/>
-                            <h1>Ethan Graf</h1>
-                            <button type="button" data-dismiss='modal' id='profile-btn' class="btn btn-outline-primary">Enter</button>
-                        </div>
+        <div class='modal fade' id='profile-modal'>
+            <div class='modal-dialog' role='content'>
+                <div class='modal-content' id='profile-content'>
+                    <div class='modal-body' id='profile-box'>
+                        <h2>Hello, World!</h2>
+                        <img id='profile-img' src="{{ url_for('static', filename='profile.jpg') }}"/>
+                        <h1>Ethan Graf</h1>
+                        <button type="button" data-dismiss='modal' id='profile-btn' class="btn btn-outline-primary">Enter</button>
                     </div>
                 </div>
             </div>
         </div>
+        <div id='map'></div>
 
 {% include "footer.html" %}
 
