Fixed bug where navbar pushes map down.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,11 @@
                 </div>
             </div>
         </div>
-        <div id='map'></div>
+        <div id='map-wrapper'>
+            {% include "navbar.html" %}
+            <div id='drawer'></div>
+            <div id='map'></div>
+        </div>
 
 {% include "footer.html" %}
 
