--- a/static/style.css
+++ b/static/style.css
@@ -12,6 +12,7 @@ html, body {
 #profile-content {
     background-color: transparent;
     border: 0px;
+    margin-top: 128px;
 }
 
 #profile-box {
@@ -25,15 +26,48 @@ html, body {
     border-radius: 100px;
     border: 4px;
     border-style: solid;
-    border-color: #444444;
+    border-color: #3F51B5;
 }
 
 #profile-btn {
     color: white;
     border-color: white;
 }
+#profile-btn:hover {
+    background-color: #3F51B5;
+}
 
-#map {
+.navbar {
+    background-color: #3F51B5;
+    border: 2px;
+    border-color: #1A237E;
+}
+
+.nav-link {
+    color: white;
+}
+.nav-link:hover {
+    color: #C5CAE9;
+}
+
+.navbar-brand {
+    color: white !important;
+}
+
+#map-wrapper {
+    position: relative;
     width: 100%;
     height: 100%;
+}
+
+#map {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.navbar {
+    position: absolute;
+    z-index: 100;
+    width: 100%;
 }
