API for loading html fragments to be displayed in the drawer.
- API to get html for location.
- JS callback loads html into drawer.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <div id='map-wrapper'>
             {% include "navbar.html" %}
             <div id='drawer'>
-                <h3 id='#drawer-title'></h3>
+                <div id='drawer-content'></div>
             </div>
             <div id='map'></div>
         </div>
