--- a/static/style.css
+++ b/static/style.css
@@ -75,6 +75,7 @@ html, body {
 #drawer {
     height: 100%;
     width: 0;
+    padding-top: 64px;
     position: fixed;
     z-index: 50;
     top: 0;
