--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
                         <h2>Hello, World!</h2>
                         <img id='profile-img' src="{{ url_for('static', filename='profile.jpg') }}"/>
                         <h1>Ethan Graf</h1>
-                        <button type="button" data-dismiss='modal' id='profile-btn' class="btn btn-outline-primary">Enter</button>
+                        <button type="button" data-dismiss='modal' id='profile-btn' class='btn btn-outline-primary'>Enter</button>
                     </div>
                 </div>
             </div>
@@ -17,6 +17,9 @@
             {% include "navbar.html" %}
             <div id='drawer'>
                 <div id='drawer-content'></div>
+                <div id='drawer-footer'>
+                  <button type='button' id='next-location-btn' class='btn btn-outline-primary'>Next</button>
+                </div>
             </div>
             <div id='map'></div>
         </div>
