--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,6 +5,9 @@
                         <a class='navbar-brand' href='#'>Ethan Graf</a>
                     </li>
                     <li class='nav-item'>
+                        <a class='nav-link' href="{{ url_for('about') }}">About</a>
+                    </li>
+                    <li class='nav-item'>
                         <a class='nav-link' href="{{ url_for('portfolio') }}">Portfolio</a>
                     </li>
                     <li class='nav-item'>
