--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
                 <div class='modal-content' id='profile-content'>
                     <div class='modal-body' id='profile-box'>
                         <h2>Hello, World!</h2>
-                        <img id='profile-img' src="{{ url_for('static', filename='profile.jpg') }}"/>
+                        <img id='profile-img' src="{{ url_for('static', filename='images/profile.jpg') }}"/>
                         <h1>Ethan Graf</h1>
                         <button type="button" data-dismiss='modal' id='profile-btn' class='btn btn-outline-primary' onclick='openDrawer()'>Enter</button>
                     </div>
@@ -18,6 +18,7 @@
             <div id='drawer'>
                 <div id='drawer-content'></div>
                 <div id='drawer-footer'>
+                    <button type='button' id='prev-location-btn' class='btn btn-outline-primary' onClick='prev()'>Prev</button>
                     <button type='button' id='next-location-btn' class='btn btn-outline-primary' onClick='next()'>Next</button>
                 </div>
             </div>
