--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
             <div class='container'>
                 <ul class='nav'>
                     <li>
-                        <a class='navbar-brand' href='#'>Ethan Graf</a>
+                        <a class='navbar-brand' href='/'>Ethan Graf</a>
                     </li>
                     <li class='nav-item'>
                         <a class='nav-link' href="{{ url_for('about') }}">About</a>
