--- a/static/style.css
+++ b/static/style.css
@@ -95,9 +95,15 @@ html, body {
 }
 
 #drawer-footer {
-  position: absolute;
-  bottom: 0;
-  padding-bottom: 16px;
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 16px;
+}
+
+.d-block, .w-100 {
+    width 100%;
+    height: 256px;
+    object-fit: cover;
 }
 
 .timeline {
