--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
                         <h2>Hello, World!</h2>
                         <img id='profile-img' src="{{ url_for('static', filename='images/profile.jpg') }}"/>
                         <h1>Ethan Graf</h1>
+                        <p>Welcome to my website!</p>
                         <button type="button" data-dismiss='modal' id='profile-btn' class='btn btn-outline-primary' onclick='openDrawer()'>Enter</button>
                     </div>
                 </div>
@@ -16,7 +17,45 @@
         <div id='map-wrapper'>
             {% include "navbar.html" %}
             <div id='drawer'>
-                <div id='drawer-content'></div>
+                <div id='drawer-content'>
+                {% for loc in locations %}
+                    <div id="{{ loc.id }}" class="location">  
+                      <h2>{{ loc.title }}</h2>
+                      <h4>{{ loc.city }}</h4>
+                      {% for line in loc.text %}
+                          <p>{{ line }}</p>
+                      {% endfor %}
+                      <div id="carouselExampleIndicators{{ loop.index }}" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="0" class="active"></li>
+                          <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="1"></li>
+                          <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            {% for image in loc.images %}
+                                {% if loop.index0 == 0 %}
+                                    <div class="carousel-item active">
+                                      <img class="d-block w-100" src="/static/images/{{ image }}"/>
+                                    </div>
+                                {% else %}
+                                    <div class="carousel-item">
+                                      <img class="d-block w-100" src="/static/images/{{ image }}"/>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators{{ loop.index }}" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators{{ loop.index }}" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+                    </div>
+                {% endfor %}
+                </div>
                 <div id='drawer-footer'>
                     <button type='button' id='prev-location-btn' class='btn btn-outline-primary' onClick='prev()'>Prev</button>
                     <button type='button' id='next-location-btn' class='btn btn-outline-primary' onClick='next()'>Next</button>
