--- a/templates/index.html
+++ b/templates/index.html
@@ -20,39 +20,41 @@
                 <div id='drawer-content'>
                 {% for loc in locations %}
                     <div id="{{ loc.id }}" class="location">  
-                      <h2>{{ loc.title }}</h2>
-                      <h4>{{ loc.city }}</h4>
-                      {% for line in loc.text %}
-                          <p>{{ line }}</p>
-                      {% endfor %}
-                      <div id="carouselExampleIndicators{{ loop.index }}" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                          <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="0" class="active"></li>
-                          <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="1"></li>
-                          <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            {% for image in loc.images %}
-                                {% if loop.index0 == 0 %}
-                                    <div class="carousel-item active">
-                                      <img class="d-block w-100" src="/static/images/{{ image }}"/>
-                                    </div>
-                                {% else %}
-                                    <div class="carousel-item">
-                                      <img class="d-block w-100" src="/static/images/{{ image }}"/>
-                                    </div>
-                                {% endif %}
-                            {% endfor %}
+                        <h2>{{ loc.title }}</h2>
+                        {% if loc.city %}
+                            <h4>{{ loc.city }}</h4>
+                        {% endif %}
+                        {% for line in loc.text %}
+                            <p>{{ line }}</p>
+                        {% endfor %}
+                        <div id="carouselExampleIndicators{{ loop.index }}" class="carousel slide" data-ride="carousel">
+                          <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators{{ loop.index }}" data-slide-to="2"></li>
+                          </ol>
+                          <div class="carousel-inner">
+                              {% for image in loc.images %}
+                                  {% if loop.index0 == 0 %}
+                                      <div class="carousel-item active">
+                                        <img class="d-block w-100" src="/static/images/{{ image }}"/>
+                                      </div>
+                                  {% else %}
+                                      <div class="carousel-item">
+                                        <img class="d-block w-100" src="/static/images/{{ image }}"/>
+                                      </div>
+                                  {% endif %}
+                              {% endfor %}
+                          </div>
+                          <a class="carousel-control-prev" href="#carouselExampleIndicators{{ loop.index }}" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleIndicators{{ loop.index }}" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators{{ loop.index }}" role="button" data-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators{{ loop.index }}" role="button" data-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Next</span>
-                        </a>
-                      </div>
                     </div>
                 {% endfor %}
                 </div>
