--- a/static/style.css
+++ b/static/style.css
@@ -105,10 +105,37 @@ html, body {
     object-fit: cover;
 }
 
-.timeline {
-    padding-top: 64px;
+#timeline-wrapper {
+    padding-top: 128px;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
+
+#timeline-header {
     text-align: center;
-    background: #456990;
+    background: #F45B69;
+    width: 200px;
+    height: 64px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 16px;
+}
+
+#timeline-header label {
+    margin-left: 16px;
+}
+
+.timeline {
+    text-align: center;
+    background: white;
+    /*#background: #456990;*/
+}
+
+.timeline ul {
+    -webkit-padding-start: 0px;
 }
 
 .timeline ul li {
@@ -117,7 +144,8 @@ html, body {
     width: 6px;
     margin: 0 auto;
     padding-top: 50px;
-    background: white;
+    padding-bottom: 15px;
+    background: #3F51B5;
     color: white;
 }
 
@@ -141,6 +169,11 @@ html, body {
     background: #F45B69;
 }
 
+.timeline ul li div > p, h5 {
+    width: 100%;
+    overflow-wrap: break-word;
+}
+
 .timeline ul li div::before {
     content: '';
     position: absolute;
@@ -156,7 +189,8 @@ html, body {
 
 .timeline ul li:nth-child(odd) div::before {
     left: -15px;
-    border-width: 8px 16px 8px 0;
+    bottom: 0px;
+    border-width: 16px 16px 0px 0px;
     border-color: transparent #F45B69 transparent transparent;
 }
 
@@ -166,7 +200,8 @@ html, body {
 
 .timeline ul li:nth-child(even) div::before {
     right: -15px;
-    border-width: 8px 0 8px 16px;
+    bottom: 0px;
+    border-width: 16px 0px 0px 16px;
     border-color: transparent transparent transparent #F45B69;
 }
 
@@ -197,4 +232,63 @@ html, body {
     transform: none;
     visibility: visible;
     opacity: 1;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 44px;
+  height: 24px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
