Added social media and contact info to nav bar.
- Added font awesome pack
- Removed old contact page

--- a/static/style.css
+++ b/static/style.css
@@ -54,6 +54,11 @@ html, body {
     color: white !important;
 }
 
+a i {
+  color: white;
+  padding-right: 24px;
+}
+
 #map-wrapper {
     position: relative;
     width: 100%;
