--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,8 +10,27 @@
                     <li class='nav-item'>
                         <a class='nav-link' href="{{ url_for('blog') }}">Blog</a>
                     </li>
-                    <li class='nav-item'>
-                        <a class='nav-link' href="{{ url_for('contact') }}">Contact</a>
+                </ul>
+                <ul class='nav'>
+                    <li>
+                        <a href='https://github.com/eagraf'>
+                            <i class='fab fa-lg fa-github'></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://www.instagram.com/ethan_graf/'>
+                            <i class='fab fa-lg fa-instagram'></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://www.linkedin.com/in/ethan-graf-62954511b/'>
+                            <i class='fab fa-lg fa-linkedin-in'></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='mailto:graf.ethan@gmail.com'>
+                            <i class='fas fa-lg fa-inbox'></i>
+                        </a>
                     </li>
                 </ul>
             </div>
