--- a/templates/header.html
+++ b/templates/header.html
@@ -11,6 +11,12 @@
         <!-- Custom css -->
         <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"/>
 
+        <!-- FontAwesome -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+        <!-- favicon -->
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 
 
 
