--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,8 @@
 
         <!-- FontAwesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <!-- Playfair Display -->
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
 
         <!-- favicon -->
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
