Scripts are only included in files where they are needed.

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,8 @@
         
         {% include "includes.html" %}
         <script src="{{ url_for('static', filename='locations.js') }}"></script>
+        <!-- Google Map API -->
+        <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAWwCmqi_Phu5j6VOMbqrlb6hXknhMt-2w&callback=initMap'></script>
     </body>
 </html>
         
