--- a/templates/header.html
+++ b/templates/header.html
@@ -18,6 +18,8 @@
 
         <!-- favicon -->
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        
+        <title>Ethan Graf</title>
 
 
 
